[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/player.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/large_thrusters.png" type="Texture" id=3]
[ext_resource path="res://Assets/small_thrusters.png" type="Texture" id=4]
[ext_resource path="res://Assets/middle_thrusters.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 3 ) ],
"loop": true,
"name": "thrust",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D"]
position = Vector2( 512, 300 )
script = ExtResource( 2 )

[node name="player" type="Sprite" parent="."]
scale = Vector2( 0.619048, 0.714286 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -17.3141, 27.7663, -14.5537, 16.9088, -0.0156403, -29.8338, 17.8349, 28.8705, 11.946, 17.2769, -12.7134, 17.6449 )

[node name="turnAxis" type="Position2D" parent="."]
position = Vector2( 0, -35 )

[node name="thrusting" type="AnimatedSprite" parent="."]
position = Vector2( -1.0946, 29.6945 )
scale = Vector2( 0.277107, 0.193283 )
frames = SubResource( 1 )
animation = "thrust"
offset = Vector2( 5, 0 )

[node name="Invul_Timer" type="Timer" parent="."]
[connection signal="timeout" from="Invul_Timer" to="." method="_on_Invul_Timer_timeout"]
